# KivyBigData

./: ElliotDG.py  README.md  buildozer.spec  data_example.py  gridex.py  kakitest.py  main.py  midpoint.py  midpoint2.py  midpoint3coordsmatch.py  midpoint4_worksbutnoproperties.py  midpoint5.py  pyproject.toml  samplermatplot.py  triotest.py  uda.py  uda2.py
